###### TWE 5.4-1 RELEASED ######

###### TWE 5.3-3 RELEASED ######
2016-03-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix for creation of outlook variables (Started/Completed date were defined as STRING variables)

2016-03-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation of TSC tool agent according to the changes in TSC and TWS's TSCToolAgent
   # Shark mode: Hiding all special extended attributes when trying to define "normal" extended attribute

###### TWE 5.3-2 RELEASED (2016-02-23) ######
2016-02-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved handling and validation of new TWF related extended attribute TWF_XML_VARIABLE_TO_HANDLE

2016-02-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported new TWF related extended attributes (TWF_XML_VARIABLE_TO_HANDLE and TWF_XML_VARIABLE_ITEM_NAME_PREFIXES)

2016-02-05 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: fixed the logic to display references of Package defined XPDL string variables (duplicated references were counted)

2016-01-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported enhancement of FOPToolAgent

###### TWE 5.3-1 RELEASED (2016-01-21) ######
2016-01-06 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported special shark deadline expressions (new script type text/sharkwfdeadlines)

2016-01-06 Warut Dechma <warut@together.at>
   # Only Java 8 is now offered during installation procedure
   
2015-12-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for new extended attribute "EVALUATE_DYNAMICSCRIPT_VARIABLE_FOR_TOOL_AGENT_ACTIVITIES"

###### TWE 5.2-3 RELEASED (2015-12-17) ######
2015-12-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Added support for FOPToolAgent      

2015-12-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Improved support for TSCToolAgent
      - Improved support for XSLTToolAgent

2015-12-04 Sasa Bojanic <sasaboy@together.at>