@@ -11438,7 +11438,7 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
       <itemizedlist>
         <listitem>
-          <para/>
+          <para>Improved Search functionality</para>
         </listitem>
       </itemizedlist>
     </section>
