@@ -1,4 +1,6 @@
 ###### TWE 5.4-1 RELEASED ######
+2016-04-07 Sasa Bojanic <sasaboy@together.at>
+   # Improved Search functionality
 
 ###### TWE 5.3-3 RELEASED ######
 2016-03-09 Sasa Bojanic <sasaboy@together.at>
